--- a/hls_config.cfg
+++ b/hls_config.cfg
@@ -1,4 +1,3 @@
-# General (no section) – part must stay at top
 part=xck26-sfvc784-2LV-c
 
 [hls]
@@ -8,15 +7,15 @@ package.output.syn=false
 syn.top=dti_core_ovr
 clock=200
 clock_uncertainty=2%
-
-# Design sources
 syn.file=./source/dti_core_ovr.cpp
 syn.file=./source/hls_stub.h
 syn.file=./source/step_propagators.cpp
 syn.file=./source/step_propagators.h
-
-# Testbench files
-tb.file=./testbench/step_propagators_tb.cpp
-tb.file=./testbench/test_utils.cpp
-tb.file=./testbench/test_utils.h
-tb.file=./testbench/validation_data_main
+csim.clean=1
+tb.file=./source/validation_data_main
+tb.file=./source/step_propagators_tb.cpp
+tb.file=./source/test_utils.cpp
+tb.file=./source/test_utils.h
+tb.file=./source/step_propagators_tb.cpp
+tb.file=./source/test_utils.cpp
+tb.file=./source/test_utils.h
