--- a/hls_config.cfg
+++ b/hls_config.cfg
@@ -12,6 +12,10 @@ syn.file=./source/hls_stub.h
 syn.file=./source/step_propagators.cpp
 syn.file=./source/step_propagators.h
 csim.clean=1
-tb.file=./source/step_propagators_tb.cpp
+#tb.file=./source/step_propagators_tb.cpp
+tb.file=./source/main_test_bench2.cpp
 tb.file=./source/test_utils.cpp
 tb.file=./source/test_utils.h
+tb.file=./source/output_utils.cpp
+tb.file=./source/output_utils.h
+tb.file=./source/validation_data_main
